# MaisCapinhas

./: .env.example  .gitignore  Makefile  README.md  front.md  pyproject.toml
apps/: cli.py
apps/api/: main.py
apps/api/routers/: kpis.py  segments.py  stores.py
apps/worker/: worker.py
apps/worker/processors/: segment_processor.py
config/: shifts.yml  stores.yml
config/cameras/: store_001_entrance.yml
models/: res10_300x300_ssd_iter_140000_fp16.caffemodel
scripts/: install_systemd.sh  people-api.service  people-worker.service  split_video.ps1  test_faces.ps1
src/people_analytics/: __init__.py
src/people_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/people_analytics/core/: config.py  exceptions.py  logging.py  settings.py  timeutils.py
src/people_analytics/db/: session.py
src/people_analytics/db/crud/: events.py  faces.py  jobs.py  kpis.py  segments.py  staff.py
src/people_analytics/db/migrations/: README.md
src/people_analytics/db/models/: __init__.py  camera.py  event_flow.py  face_capture.py  job.py  kpi_hourly.py  kpi_shift.py  metrics_presence.py  staff.py  store.py  video_segment.py
src/people_analytics/kpi/: rebuild.py
src/people_analytics/kpi/aggregators/: hourly.py  occupancy.py  peaks.py  shift.py
src/people_analytics/storage/: fingerprint.py  paths.py  scanner.py
src/people_analytics/vision/: pipeline.py  video_reader.py
tests/: test_path_parser.py  test_shift_bucketing.py
var/: people_analytics.db
var/outputs/: tabuleiro_full.json  tabuleiro_full.jsonl
(+9 files in other folders)
